Software/PSOC/Projekt_PSoC_Kode/Projekt_PSoC_Kode.cydsn/REBUILD.log
--------------- Rebuild Started: 05/01/2019 17:58:03 Project: Projekt_PSoC_Kode, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\RpiSPI.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PIDcontroller.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MotorController.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Switches.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\GyroDefs.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\i2c.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Gyro.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SDA_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SCL_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_SLAVE.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_MASTER.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_Red.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_Green.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PowerButton.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\FollowButton.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_PWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_PWM_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Power_isr.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Follow_isr.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_4.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIS.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIS_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIS_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIS_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\miso.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\mosi.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\sclk.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ss.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIS_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MotorPWM_1_BRUN.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Forward_ORANGE.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MotorPWM_2_BLAA.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Backward_GUL.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Motor_timer_isr.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_spi.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Projekt_PSoC_Kode.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Projekt_PSoC_Kode.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Projekt_PSoC_Kode.map"
Deleting file ".\Projekt_PSoC_Kode.cycdx"
Deleting file ".\Projekt_PSoC_Kode.svd"
Deleting file ".\Projekt_PSoC_Kode.rpt"
Deleting file ".\Projekt_PSoC_Kode_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\jespe\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\jespe\Desktop\GIT\iFollow\Software\PSOC\Projekt_PSoC_Kode\Projekt_PSoC_Kode.cydsn\Projekt_PSoC_Kode.cyprj -d CY8C5888LTI-LP097 -s C:\Users\jespe\Desktop\GIT\iFollow\Software\PSOC\Projekt_PSoC_Kode\Projekt_PSoC_Kode.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0032: warning: Clock Warning: (SPIS_IntClock's accuracy range '24 MHz +/- 1%, (23.76 MHz - 24.24 MHz)' is not within the specified tolerance range '20 MHz +/- 5%, (19 MHz - 21 MHz)'.).
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.2\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\SPI_Slave_v2_70\SPI_Slave_v2_70.cysch (Instance:IntClock)
 * C:\Users\jespe\Desktop\GIT\iFollow\Software\PSOC\Projekt_PSoC_Kode\Projekt_PSoC_Kode.cydsn\Projekt_PSoC_Kode.cydwr (SPIS_IntClock)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 2 pin(s) will be assigned a location by the fitter: LED_Green(0), LED_Red(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -x c++ -std=c++1z -fno-exceptions -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/RpiSPI.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -x c++ -std=c++1z -fno-exceptions -c RpiSPI.c -o .\CortexM3\ARM_GCC_541\Debug\RpiSPI.o
RpiSPI.c: In member function 'uint8_t RpiSPI::ReadData()':
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
RpiSPI.c:68:47: error: invalid conversion from 'uint8_t {aka unsigned char}' to 'uint8_t* {aka unsigned char*}' [-fpermissive]
         return handleByteReceived(byteReceived);
                                               ^
In file included from RpiSPI.c:15:0:
RpiSPI.h:37:12: note:   initializing argument 1 of 'uint8_t RpiSPI::handleByteReceived(uint8_t*)'
    uint8_t handleByteReceived(uint8_t byteReceived[]);
            ^
--------------- Rebuild Failed: 05/01/2019 17:58:17 ---------------
